testdata/baselines/reference/submodule/conformance/importingExportingTypes.errors.txt
/index.js(5,10): error TS2484: Export declaration conflicts with exported declaration of 'JSDocType'.


==== /node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
      export interface WriteFileOptions {}
      export function writeFile(path: string, data: any, options: WriteFileOptions, callback: (err: Error) => void): void;
    }
    
==== /index.js (1 errors) ====
    import { writeFile, WriteFileOptions, WriteFileOptions as OtherName } from "fs";
    
    /** @typedef {{ x: any }} JSDocType */
    
    export { JSDocType };
             ~~~~~~~~~
!!! error TS2484: Export declaration conflicts with exported declaration of 'JSDocType'.
    export { JSDocType as ThisIsFine };
    export { WriteFileOptions };
    